Implement user invitation via email with validation and notification(#84)
